# superset

./: Superset_In-App_Tutorial_Assistant_Technical_Specification.md  docker-compose.yml  index.yaml  pyproject.toml
docker/: .env-local.example
docker/pythonpath_dev/: superset_config.py
tasks/: plan.md  todo-01-branch-flag-bootstrap.md  todo-02-widget-shell.md  todo-03-service-skeleton.md  todo-04-streaming-ask.md  todo-05-knowledge-pack.md  todo-06-wire-widget.md  todo-07-compose-integration.md  todo-08-a11y-states.md  todo-09-hardening-demo.md  todo-10-model-evaluation.md  todo.md
tutorial-assistant/: .dockerignore  Dockerfile  README.md  pyproject.toml
tutorial-assistant/knowledge/: 00-placeholder-dashboards.md  01-creating-a-dashboard.md  01-placeholder-explore.md  02-creating-a-chart.md  03-creating-a-line-chart.md  04-creating-a-bar-chart.md  05-creating-a-pie-chart.md  06-creating-a-big-number-chart.md  07-creating-a-table-chart.md  08-dimensions.md  09-metrics.md  10-dimensions-vs-metrics.md  11-dashboard-and-chart-filters.md  12-datasets.md  13-connecting-a-database.md  14-sql-lab-basics.md  15-editing-and-arranging-a-dashboard.md
tutorial-assistant/patches/: tutorial-assistant-integration.patch
tutorial-assistant/scripts/: generate-integration-patch.sh
tutorial-assistant/src/: knowledge.py  main.py  prompts.py  schemas.py  settings.py
tutorial-assistant/tests/: conftest.py  fakes.py  test_adversarial.py  test_api.py  test_ask_stream.py  test_knowledge.py  test_knowledge_pack.py  test_prompts.py  test_schemas.py  test_settings.py
(+14 files in other folders)
